# network-sandbox

./: .env.example  .gitignore  README.md  TEST_SUMMARY.md  docker-compose.override.yml.example  docker-compose.yml
.github/: copilot-instructions.md
client/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/public/: index.html
client/src/: App.perf.test.tsx  App.test.tsx  App.tsx  types.ts
client/src/components/: WorkerCard.test.tsx  WorkerCard.tsx
client/src/config/: api.ts
grafana/provisioning/dashboards/: default.yml  network-sandbox.json
load-balancer/: Dockerfile  benchmark_test.go  concurrency_test.go  go.mod  go.sum  main.go  main_test.go  main_test.go.bak  package-lock.json
prometheus/: prometheus.yml
tests/: docker_compose_test.py  requirements.txt
workers/: CUSTOM_WORKER_GUIDE.md
workers/go/: Dockerfile  go.mod  main.go  main_test.go
workers/python/: Dockerfile  main.py  requirements-test.txt  requirements.txt  test_main.py
workers/rust/: Cargo.toml  Dockerfile
workers/rust/src/: main.rs
