[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
parking_lot = "0.12"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
